添加测试模块

--- a/settings.gradle
+++ b/settings.gradle
@@ -3,4 +3,5 @@ include 'kimzing-springboot-starter'
 include 'kimzing-springboot-starter-test'
 include 'springboot-mybatis'
 include 'springboot-restful'
+include 'springboot-test'
 include 'springboot-validate'
