--- a/settings.gradle
+++ b/settings.gradle
@@ -1,6 +1,7 @@
 rootProject.name = 'kimzing-springboot'
 include 'kimzing-springboot-starter'
 include 'kimzing-springboot-starter-test'
+include 'springboot-mq'
 include 'springboot-mybatis'
 include 'springboot-restful'
 include 'springboot-test'
