--- a/springboot-test/build.gradle
+++ b/springboot-test/build.gradle
@@ -19,6 +19,7 @@ repositories {
 
 dependencies {
     implementation 'com.alibaba:fastjson:2.0.7'
+    implementation 'org.apache.commons:commons-lang3:3.12.0'
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
     implementation 'org.springframework.boot:spring-boot-starter-web'
