--- a/springboot-mq/src/main/resources/application-kafka.yml
+++ b/springboot-mq/src/main/resources/application-kafka.yml
@@ -29,7 +29,7 @@ spring:
       value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
       # 当服务端没有该消费者对应的offset时，该从哪开始读取消息
       auto-offset-reset: earliest
-      # 消费者的offset是否在后台定期提交。
+      # 消费者的offset是否在后台定期提交。(当获取消息后，无论是否抛出异常，都会提交当前消费的offset)
       enable-auto-commit: true
       # 如果“enable.auto.commit”设置为true ，则消费者偏移量自动提交给Kafka的频率。
       auto-commit-interval: 1000
