--- a/springboot-mq/src/main/resources/application-kafka.yml
+++ b/springboot-mq/src/main/resources/application-kafka.yml
@@ -32,7 +32,10 @@ spring:
       value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
       # 当服务端没有该消费者对应的offset时，该从哪开始读取消息
       auto-offset-reset: earliest
-      # 消费者的offset是否在后台定期提交。(当获取消息后，无论是否抛出异常，都会提交当前消费的offset)
+      # 消费者的offset是否在后台定期提交。(当获取消息后，无论是否抛出异常，都会提交当前消费的offset)。注意：设置为false时需配合ackMode,不然spring还是会自动提交
       enable-auto-commit: true
       # 如果“enable.auto.commit”设置为true ，则消费者偏移量自动提交给Kafka的频率。
       auto-commit-interval: 1000
+    listener:
+      # 提交模式。如果是手动提交,同时需要配置enable-auto-commit: false
+#      ack-mode: manual
