--- a/springboot-mq/build.gradle
+++ b/springboot-mq/build.gradle
@@ -23,6 +23,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-amqp'
     implementation 'org.springframework.kafka:spring-kafka'
+    implementation 'org.apache.rocketmq:rocketmq-spring-boot-starter:2.0.4'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
