--- a/springboot-mq/src/main/resources/application-kafka.yml
+++ b/springboot-mq/src/main/resources/application-kafka.yml
@@ -14,8 +14,8 @@ spring:
       # producer相关的属性
       properties:
         # 定义拦截器
-        interceptor:
-          classes: com.kimzing.mq.kafka.interceptor.config.MyInterceptor
+#        interceptor:
+#          classes: com.kimzing.mq.kafka.interceptor.config.MyInterceptor
         # 即使消息没有到达指定数量，也会在超过5ms时进行发送
         linger:
           ms: 5
@@ -36,6 +36,6 @@ spring:
       enable-auto-commit: true
       # 如果“enable.auto.commit”设置为true ，则消费者偏移量自动提交给Kafka的频率。
       auto-commit-interval: 1000
-    listener:
+#    listener:
       # 提交模式。如果是手动提交,同时需要配置enable-auto-commit: false
 #      ack-mode: manual
