--- a/springboot-mq/build.gradle
+++ b/springboot-mq/build.gradle
@@ -23,6 +23,9 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-amqp'
     implementation 'org.springframework.kafka:spring-kafka'
+    implementation 'org.eclipse.paho:org.eclipse.paho.client.mqttv3:1.2.5'
+    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
+    annotationProcessor 'org.springframework.boot:spring-boot-autoconfigure-processor'
     implementation 'org.apache.rocketmq:rocketmq-spring-boot-starter:2.0.4'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
