--- a/settings.gradle
+++ b/settings.gradle
@@ -3,6 +3,7 @@ include 'kimzing-springboot-starter'
 include 'kimzing-springboot-starter-test'
 include 'springboot-mq'
 include 'springboot-mybatis'
+include 'springboot-redis'
 include 'springboot-restful'
 include 'springboot-test'
 include 'springboot-validate'
